k8s_demo/manifestFiles/pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: fastapi
  labels:
    name: fastapi
spec:
  containers:
  - name: fastapi
    image: malikasajjad/fastapi
