k8s_demo/manifestFiles/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  type: NodePort
  ports:
    - targetPort: 80
      port: 80
      nodePort: 30080
  selector:
    name: fastapi
